# ztrade

./: .env  Dockerfile  Makefile  README.md  cpt.ipynb  cpt2.ipynb  cptnyu.ipynb  cpts.ipynb  eyeear_92250_cpt.csv  mtsinai.ipynb  nb.marimo.py  nyp_92250_cpt.csv  nyu_92250_cpt.csv  nyu_tisch_92250_cpt.csv  publicsandbox.ipynb  pyproject.toml  sandbox.ipynb  sandboxibkr.ipynb  sb_cboe.ipynb  sb_polygon.ipynb  south_92250_cpt.csv  stlukes_92250_cpt.csv
options/: data_sources.py  demo.ipynb  pricer.ipynb  pricing_utils.py  ui.py
options/auth/: users.py
options/data/: sample_options.csv
src/: data_sources.py  demo.ipynb  pricing_utils.py  ui.py
