[project]
name = "ztrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.40",
    "duckdb>=1.4.2",
    "ib-insync>=0.9.86",
    "ijson>=3.4.0.post0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "marimo>=0.14.13",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.2",
    "polars>=1.31.0",
    "polygon-api-client>=1.15.4",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "quantlib>=1.40",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

